# cpp_crash_course

./: .gitignore  CMakeLists.txt  Note.md  cover.cpp
cp11_smart_pointers/: exp1_smart_pointers.cpp
cp2_types/: exp10_array_type.cpp  exp11_for_loop_on_array.cpp  exp14_ctype_string.cpp  exp15_ascii.cpp  exp17_switch_statement.cpp  exp21_class_with_access_control.cpp  exp22_constructors.cpp  exp23_initialization.cpp  exp24_destructor.cpp  exp3_floating_point_types.cpp  exp4_character_types.cpp  exp6_comparison_operators.cpp  exp8_cstddef.cpp
cp3_reference_types/: exp10_references.cpp  exp11_forward_linked_lists_the_canonical_pointer_based_data_structure.cpp  exp12_employing_references.cpp  exp14_constant_correctness.cpp  exp2_dereferencing_pointers.cpp  exp4_ponters_and_arrays.cpp  exp5_handling_decay.cpp  exp6_pointer_arithmetic.cpp  exp7_buffer_overflow.cpp
cp4_the_object_life_cycle/: exp13_handling_exceptions.cpp  exp14_user_defined_exceptions.cpp  exp16_call_stacks_and_exceptions.cpp  exp17_throwing_in_destructors.cpp  exp1_automatic_storage_duration.cpp  exp20_call_stack_unwinding.cpp  exp21_exceptions_and_performance.cpp  exp24_copy_constructor.cpp  exp25_copy_assignment.cpp  exp28_move_semantics.cpp  exp29_value_categories.cpp  exp30_lvalue_and_rvalue_references.cpp  exp34_lvalue_rvalue_sample.cpp  exp35_simple_string_final_product.cpp  exp6_dynamic_storage_duration.cpp  exp8_memory_leak.cpp
cp5_runtime_polymorphism/: exp10_pure_virtual_class_with_virtual_destructor.cpp  exp11_implementing_interfaces.cpp  exp13_updating_bank_logger_with_propery_injection.cpp  exp3_object_composition_and_implementation_inheritance  exp4_defining_interfaces.cpp  exp5_base_class_inheritance.cpp  exp6_member_inheritance.cpp  exp7_virtual_methods.cpp  exp8_pure_virtual_methods.cpp  exp_15_summary
cp6_compile_time_polymorphism/: exp12_defining_a_concept.cpp  exp13_type_traits.cpp  exp15_building_concepts_from_requires_expressions.cpp  exp1_templates  exp20_template_example.cpp  exp21_variadic_templates.cpp  exp2_declaring_templates.cpp  exp4_const_cast.cpp  exp7_narrow_cast.cpp
cp7_expressions/: exp10_implicit_type_conversions.cpp  exp11_floating_point_to_integer_conversion.cpp  exp12_integer_to_integer_conversion.cpp  exp15_explicit_type_conversion.cpp  exp16_cstyle_casts.cpp  exp17_user_defined_type_conversion.cpp  exp18_user_defined_type_conversion_2.cpp  exp19_constant_expression.cpp  exp1_operators.cpp  exp20_volatile_expression.cpp  exp2_ternary_conditional_operator.cpp  exp3_the_comma_operator.cpp  exp5_overliading_operator_new.cpp  exp6_new_delete_operator_overloading.cpp  exp7_operator_precedence_and_associativity.cpp
cp8_statements/: exp11_range_based_for_loop.cpp  exp3_using_directive.cpp  exp4_using_directive_2.cpp  exp6_type_aliasing_on_templates.cpp  exp8_attributes.cpp
cp9_functions/: exp11_lambda_capture_by_value.cpp  exp12_lambda_capture_by_reference_and_default_captures.cpp  exp14_capturing_this.cpp  exp15_constexpr_lambda_expression.cpp  exp16_std_function_empty_function.cpp  exp17_assigning_a_callable_object_to_a_function.cpp  exp18_std_function_extended_example.cpp  exp19_main_with_parameters.cpp  exp20_alphabet_histogram.cpp  exp8_lambda_expression.cpp  exp9_lambda_default_arguments.cpp
crash_course/cp11_smart_pointers/: exp2_scoped_pointer.cpp
crash_course/cp2_types/: exp12_range_based_for_loop.cpp  exp13_number_of_elements_in_array.cpp  exp16_enum_type.cpp  exp18_plain_old_data_classes_struct.cpp  exp19_unions.cpp  exp1_integer_types.cpp  exp20_fully_featured_class.cpp  exp2_integer_in_different_representation.cpp  exp5_boolean_types.cpp  exp7_logical_operators.cpp  exp9_void_type.cpp
crash_course/cp3_reference_types/: exp13_this_pointer.cpp  exp15_member_initializer_lists.cpp  exp16_auto_type_deduction.cpp  exp1_addressing_variables.cpp  exp3_member_of_pointer_operator.cpp  exp6_pointer_arithmetic.cpp  exp8_brackets_and_pointer_arithmetic.cpp  exp9_void_pointer_stdbyte_pointer_nullptr.cpp
crash_course/cp4_the_object_life_cycle/: exp10_exceptions_throw_keyword.cpp  exp11_try_catch_blocks.cpp  exp12_standard_exception_class.cpp  exp15_the_noexcept_keyword.cpp  exp18_a_simplestring_class.cpp  exp19_composing_a_simplestring.cpp  exp22_alternatives_to_exceptions.cpp  exp23_copy_semantics.cpp  exp26_default_and_delete_keyword_for_copy.cpp  exp27_copy_guidelines.cpp  exp2_static_storage_duration.cpp  exp31_std_move_function.cpp  exp32_move_construction.cpp  exp33_move_assignment.cpp  exp3_local_static_variables.cpp  exp4_static_member.cpp  exp5_thread_local_storage_duration.cpp  exp7_dynamic_arrays.cpp  exp9_tracing_the_object_life_cycle.cpp
crash_course/cp5_runtime_polymorphism/: exp12_updating_bank_logger_with_constructor_injection.cpp  exp14_choosing_constructor_or_property_injection.cpp  exp1_a_motivating_example.cpp  exp2_interfaces  exp5_base_class_inheritance.cpp  exp9_pure_virtual_classes_without_virtual_destructors.cpp
crash_course/cp6_compile_time_polymorphism/: exp10_type_checking_in_templates.cpp  exp11_concepts.cpp  exp14_requirements.cpp  exp15_building_concepts_from_requires_expressions.cpp  exp16_builtin_concepts.cpp  exp17_ad_hoc_requires_expressions.cpp  exp18_static_assert_the_preconcepts_stopgap.cpp  exp19_non_type_template_parameters.cpp  (+7 more)
learning_cmake/: CMakeLists.txt  quoted.cmake
libraries/cereal/: CMakeLists.txt
practice/: bit_operation.cpp  struct_sample.cpp
scrap/: exp1.cpp  exp10_null_test.cpp  exp11_get_function_test.cpp  exp12_concepts_requires_expression.cpp  exp13_deduction_guide_test.cpp  exp2_modulous.cpp  exp3_shift_operator.cpp  exp4_null_pointer.cpp  exp5_negative_number.cpp  exp6_std_exchange.cpp  exp7_pass_by_value_vs_reference.cpp  exp8_const_reference.cpp  exp9_std_list_merge.cpp  macro_advanced_test.cpp  macro_basics_test.cpp  macro_test.cpp  tetris.cpp
(+251 files in other folders)
